--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@ GROUP_ID=-1002247674621
 COLLECTION_ID=j7qeFNnpWTbaf5g9sMCxP2zfKrH5QFgE56SuYjQDQi1
 RPC_ENDPOINT=https://mainnet.helius-rpc.com/?api-key=6873bd5e-0b5d-49c4-a9ab-4e7febfd9cd3
 HELIUS_API_KEY=6873bd5e-0b5d-49c4-a9ab-4e7febfd9cd3
-WEBHOOK_URL=https://bot-server-h45u.onrender.com/verify_callback
+WEBHOOK_URL=https://bot-server-kem4.onrender.com/verify_callback
+
 
